--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,7 +28,7 @@
 
 
 
-<body onload="preload()">
+<body>
 <!-- preload -->
   <!-- <div id="preload" class="position-absolute w-100 h-100 justify-content-center align-items-center" style="background-color: #FFF3E8; display: flex">
     <div><img src="./images/spin-preload.svg" alt="spin" width="80px"></div>
@@ -95,7 +95,6 @@
 
       <div class="hero_bg_box">
         <div class="bg_img_box" data-anima="cima">
-          <!-- <img src="images/fundo_hero__2.png" class="mx-auto" alt=""> -->
         </div>
       </div>
 
