--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,14 +11,12 @@
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             
-            <p class="p-0 lead text-center pt-2 pb-0">
+            <p class="p-0 lead text-center pt-3 pb-0">
               Te ajudo a cultivar a auto estima e construir relacionamentos mais saudáveis
 			</p>
             <div class="d-grid gap-2 p-0 d-md-flex justify-content-center">
-              	
-                		
 						
-						<a class="botao-dourado px-4 py-0 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span class="fw-normal">Bem Vindo</span></a>
+				<a class="botao-dourado px-4 py-0 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span class="fw-normal">Bem Vindo</span></a>
                 		
 
                	 	
@@ -127,16 +125,16 @@
     </div>
 
 
-	  <p class="lead mt-5 p-4 pb-5 container" data-anima="baixo">Se ja percebeu algum desses sintômas em sua vida, <strong>procure ajuda</strong>. Muitas pessoas ainda resistem à ideia de fazer terapia por medo, preconceito ou apenas por não saberem que se trata de uma ferramenta que apoia na <strong>resolução de problemas a partir de um outro ponto de vista</strong>.</p>
-	<div data-anima="baixo" class="py-2 pulse-brilho">
-		<img src="./images/seta-encaracolada.svg" style="transform: rotateZ(-10deg);" >
-	</div>
+	  <p class="lead mt-5 p-4 pt-5 container" data-anima="baixo">Se ja percebeu algum desses sintômas em sua vida, <strong>procure ajuda</strong>. Muitas pessoas ainda resistem à ideia de fazer terapia por medo, preconceito ou apenas por não saberem que se trata de uma ferramenta que apoia na <strong>resolução de problemas a partir de um outro ponto de vista</strong>.</p>
+	<!-- <div data-anima="baixo" class="py-2 pulse-brilho">
+		<img src="./images/seta-encaracolada.svg" style="transform: rotateY(-180deg) rotateZ(-20deg);" >
+	</div> -->
 
   </section>
   <!-- end Section Quando devo procurar terapia -->
 
 <!-- section Features (caracteristicas) -->
-<section class="min-vh-100 py-5 d-flex flex-column">
+<section class="min-vh-100 py-4 d-flex flex-column">
 
 	<div class="d-flex parallax p1 rounded mb-3" style="height: 23rem;">
 	
@@ -150,7 +148,7 @@
 
   <div class="d-flex justify-content-center align-items-center py-4">
     
-		<div class="row w-100 d-flex align-items-center justify-content-center">
+		<div class="container row w-100 d-flex align-items-top justify-content-center">
 
 			<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
 				
@@ -223,119 +221,16 @@
 			</div>
 		</div>
 	</div>
-	<div data-anima="baixo" class="py-3 text-center pulse-brilho">
-		<img src="./images/seta-encaracolada.svg"  style="transform: rotateY(-180deg) rotateZ(-30deg);" >
-	</div>
+	<!-- <div data-anima="baixo" class="py-3 text-center pulse-brilho">
+		<img src="./images/seta-encaracolada.svg"  style="transform: rotateZ(-20deg);" >
+	</div> -->
 </section> 
 <!-- end section features -->
 
 </main>
 
-  <!-- Section Terapia online -->
-  <div class="container p-4 mx-1 py-1" data-anima="baixo">
-	<div class="row mb-4 align-items-center flex-lg-row-reverse">
-		<div class="col-md-6 col-xl-5 p-lg-0 pt-lg-3">
-			<div class="lc-block mb-3">
-				<div editable="rich">
-					<h2 class="fw-bold display-6">Terapia online</h2>
-					<hr class="w-50 p-2 mt-0 mb-lg-2">
-				</div>
-			</div>
-
-
-			<div class="lc-block mb-4">
-				<div editable="rich">
-
-					<p class="lead">As sessões online foram permitidas pelo Conselho Federal de Psicologia a partir de 2018, desde que o profissional seja devidamente <strong>cadastrado na plataforma e-Psi</strong>. Além disso, o modelo tradicional de encontros presenciais mudou radicalmente nos últimos anos e passou por uma grande transformação em 2020, devido à pandemia. Por isso, tenho me aprimorado a cada dia para manter a <strong>mesma relação de acolhimento e empatia</strong> com todos que atendo.</p>
-
-				</div>
-			</div>
-			
-		</div>
-		<div class="col-md-6 col-xl-7 mb-4 mb-lg-0 " style="">
-
-
-			<div class="lc-block position-relative"><img class="img-fluid rounded shadow" src="./images/terapia-online.png" width="" height="" alt="Photo by Richard Horvath">
-				
-			</div>
-		</div>
-		
-	</div>
-</div>
- <!-- end section Terapia online -->
-
-<!-- Section Vantagens-->
-	<div class="container max-vw-100 p-4 py-1 d-flex flex-column align-items-md-center" data-anima="baixo">
-		
-		<div class="container px-xl-5 pt-5 d-flex flex-column align-items-start align-items-md-center" data-anima="baixo">
-			<h2 class="fw-bold display-6">Algumas vantagens da terapia online</h2>
-			<hr class="w-50 w-md-25 p-2 mt-0 mb-lg-3">
-		</div>
-
-		
-		
-		<div class="lc-block d-sm-flex align-items-center p-3">
-			<div class="d-inline-flex align-items-center">
-				<div>
-					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
-						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
-					</svg>
-				</div>
-
-				<div class="ms-3 align-self-center" editable="rich">
-					<p class="lead m-0">Facilita a comunicação com assuntos mais delicados.</p>
-				</div>
-			</div>
-		</div>
-		<div class="lc-block d-sm-flex align-items-center p-3">
-			<div class="d-inline-flex align-items-center">
-				<div>
-					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
-						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
-					</svg>
-				</div>
-
-				<div class="ms-3 align-self-center" editable="rich">
-					<p class="lead m-0">Permite maior flexibilidade de horários</p>
-				</div>
-			</div>
-		</div>
-		<div class="lc-block d-sm-flex align-items-center p-3">
-			<div class="d-inline-flex align-items-center">
-				<div>
-					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
-						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
-					</svg>
-				</div>
-
-				<div class="ms-3 align-self-center" editable="rich">
-					<p class="lead m-0">Respeita os mesmos princípios éticos e sigílo do atendimento presencial</p>
-				</div>
-			</div>
-		</div>
-		<div class="lc-block d-sm-flex align-items-center p-3">
-			<div class="d-inline-flex align-items-center">
-				<div>
-					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
-						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
-					</svg>
-				</div>
-
-				<div class="ms-3 align-self-center" editable="rich">
-					<p class="lead m-0">Oferece mais praticidade e evita deslocamentos desnecessários</p>
-				</div>
-			</div>
-		</div>
-	</div>
-<!-- end Section Vantagens -->
-
-
   <!-- Section Sobre -->
-  <section class="container py-5 my-5">
+  <section class="container py-5 mb-4">
 	<div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-start rounded-3 border shadow-lg" data-anima="baixo">
 	  <div class="col-lg-7 p-3 pb-5 p-lg-5 pt-lg-3">
 		<div class="lc-block mb-3">
@@ -491,8 +386,110 @@
 </div>
 <!-- end section depoimentos-->
 
+  <!-- Section Terapia online -->
+  <div class="container w-100 pt-4" data-anima="baixo">
+	<div class="row mb-4 align-items-center flex-lg-row-reverse">
+		<div class="col-md-6 col-xl-5 px-5 p-lg-0 pt-lg-3">
+			<div class="lc-block mb-3">
+				<div editable="rich">
+					<h2 class="fw-bold display-6">Terapia online</h2>
+					<hr class="w-50 p-2 mt-0 mb-lg-2 ">
+				</div>
+			</div>
+
+
+			<div class="lc-block mb-4">
+				<div editable="rich">
+
+					<p class="lead">As sessões online foram permitidas pelo Conselho Federal de Psicologia a partir de 2018, desde que o profissional seja devidamente <strong>cadastrado na plataforma e-Psi</strong>. Além disso, o modelo tradicional de encontros presenciais mudou radicalmente nos últimos anos e passou por uma grande transformação em 2020, devido à pandemia. Por isso, tenho me aprimorado a cada dia para manter a <strong>mesma relação de acolhimento e empatia</strong> com todos que atendo.</p>
+
+				</div>
+			</div>
+			
+		</div>
+		<div class="col-md-6 col-xl-7 mb-4 mb-lg-0">
+
+
+			<div class="lc-block position-relative"><img class="img-fluid rounded shadow" src="./images/terapia-online.png" width="" height="" alt="Photo by Richard Horvath">
+				
+			</div>
+		</div>
+		
+	</div>
+</div>
+ <!-- end section Terapia online -->
+
+<!-- Section Vantagens-->
+	<div class="container max-vw-100 p-4 pb-5 d-flex flex-column align-items-md-center" data-anima="baixo">
+		
+		<div class="container px-xl-5 pt-5 d-flex flex-column align-items-start align-items-md-center" data-anima="baixo">
+			<h2 class="fw-bold display-6">Algumas vantagens da terapia online</h2>
+			<hr class="w-50 w-md-25 p-2 mt-0 mb-lg-3">
+		</div>
+
+		
+		
+		<div class="lc-block d-sm-flex align-items-center p-3">
+			<div class="d-inline-flex align-items-center">
+				<div>
+					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
+						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
+					</svg>
+				</div>
+
+				<div class="ms-3 align-self-center" editable="rich">
+					<p class="lead m-0">Facilita a comunicação com assuntos mais delicados.</p>
+				</div>
+			</div>
+		</div>
+		<div class="lc-block d-sm-flex align-items-center p-3">
+			<div class="d-inline-flex align-items-center">
+				<div>
+					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
+						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
+					</svg>
+				</div>
+
+				<div class="ms-3 align-self-center" editable="rich">
+					<p class="lead m-0">Permite maior flexibilidade de horários</p>
+				</div>
+			</div>
+		</div>
+		<div class="lc-block d-sm-flex align-items-center p-3">
+			<div class="d-inline-flex align-items-center">
+				<div>
+					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
+						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
+					</svg>
+				</div>
+
+				<div class="ms-3 align-self-center" editable="rich">
+					<p class="lead m-0">Respeita os mesmos princípios éticos e sigílo do atendimento presencial</p>
+				</div>
+			</div>
+		</div>
+		<div class="lc-block d-sm-flex align-items-center p-3">
+			<div class="d-inline-flex align-items-center">
+				<div>
+					<svg width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="#a3720f" xmlns="http://www.w3.org/2000/svg" lc-helper="svg-icon" class="text-success">
+						<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+						<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"></path>
+					</svg>
+				</div>
+
+				<div class="ms-3 align-self-center" editable="rich">
+					<p class="lead m-0">Oferece mais praticidade e evita deslocamentos desnecessários</p>
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- end Section Vantagens -->
+
   <!-- Section FAQ -->
-<div class="container pt-3 pb-5">
+<div class="container py-5 mt-">
 	<div class="row mb-5">
 		
 		<div class="container px-xl-5 text-center d-flex flex-column align-items-center" data-anima="baixo">
@@ -625,35 +622,29 @@
 
 	<div style="background:url(./images/outono.jpg)  center / cover no-repeat; width:100%; position: absolute; z-index:-1; height: 30rem; transform: scaleX(-1);"></div>
 
-	<div class="container text-center py-4 py-md-5">
-	<div class="lc-block border-0 text-center rounded p-4 p-lg-5" style="background-color: rgba(255, 255, 255, 0.7);">
-		<div class="row card-body mb-3 mb-lg-4">
-			<div class="col-xl-11 col-xxl-9 mx-auto">
-				<div class="lc-block mb-4">
-					<div editable="rich">
-						<p class="text-black-50">DIFÍCIL ENCAIXAR A TERAPIA NA ROTINA?</p>
+	<div class="container text-center py-4 py-md-5 mb-1 ">
+		<div class="lc-block border-0 text-center rounded p-4 p-lg-5" style="background-color: rgba(255, 255, 255, 0.7);">
+			<div class="row card-body mb-3 mb-lg-4">
+				<div class="col-xl-11 col-xxl-9 mx-auto">
+					<div class="lc-block mb-4">
+						<div editable="rich">
+							<p class="text-black-50">DIFÍCIL ENCAIXAR A TERAPIA NA ROTINA?</p>
+						</div>
+					</div>
+					<div class="lc-block">
+						<h3 editable="inline" class="display-6">Se o que impede você de fazer psicoterapia é 
+							<strong>tempo ou distância</strong>, recorra às sessões online
+						</h3>
 					</div>
 				</div>
-				<div class="lc-block">
-					<h3 editable="inline" class="display-6">Se o que impede você de fazer psicoterapia é 
-						<strong>tempo ou distância</strong>, recorra às sessões online
-					</h3>
-				</div>
+			</div>
+			<div class="container d-grid gap-2 d-md-flex justify-content-center" data-anima="baixo">
+				<a class="botao-dourado px-4 w-auto pulse-brilho" href="/contato"role="button">
+					<span>Agende uma avaliação grátis</span>
+				</a>       
 			</div>
 		</div>
-		<div class="d-grid gap-2 d-md-flex justify-content-md-center">
-              	
-			<button type="submit"  class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
-				
-				<span>
-					  <a href="/contato" style="color: #b4882f; ">Agende a primeira sessão grátis</a>
-				</span>
-
-			</button>
-
-		</div>
 	</div>
-</div>
 </section>
 <!-- end section call to action -->
 
