--- a/views/privacidade.ejs
+++ b/views/privacidade.ejs
@@ -29,7 +29,7 @@
           <div class="lc-block mb-5 mb-md-0">
              <div editable="rich">
                 <h2 class="fw-bolder">Índice</h2>
-                <p> 1 - Informações Gerais
+                <p> 1 - Informações Gerais<br>
                     2 - Quem somos<br>
                     3 - Quem pode usar nosso site<br>
                     4 - Aceitação da Política de Privacidade e dos Termos de Uso<br>
