--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -17,11 +17,11 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">
               Mônica Costa
             </h1> -->
-            <p class="lead text-center py-3">
+            <p class="lead text-center py-2">
               Me conheça um pouco mais
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-center">
-				<a id="btnMinhaHistoria" class="botao-dourado px-4 mt-3 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span>Minha História</span></a>
+				<a id="btnMinhaHistoria" class="botao-dourado px-4 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span>Minha História</span></a>
 
             </div>
           </div>
