--- a/views/tratamentos.ejs
+++ b/views/tratamentos.ejs
@@ -6,28 +6,13 @@
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
 			<div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
 				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
-			  </div>
-			  <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
-	
-            
-            <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
-            <!-- <h4>
-              Psicóloga
-            </h4>
-            <h1 class="display-5 fw-bold lh-1 mb-3">
-              Mônica Costa
-            </h1> -->
-            <p class="lead text-center pt-3">
-				Vamos tratar juntos os pensamentos, emoções e comportamentos que te trazem sofrimento
-            </p>
-            <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <button type="button" class="btn-lg px-4 me-md-2 botao-dourado" style="background-color:#000"::before>
-                <span>
-                  <a href="#depressao" style="color: #b4882f; ">Tratamentos</a>
-                </span>
-               </button>
-            </div> -->
-          </div>
+			</div>
+			<div class="col-lg-6 pt-lg-5" data-anima="esquerda">
+            	<img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+                <p class="lead text-center pt-2">
+					Vamos tratar juntos os pensamentos, emoções e comportamentos que te trazem sofrimento
+        	    </p>
+          	</div>
         </div>
       </div>
       <!-- end hero section -->
