--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -2,12 +2,12 @@
 <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
+      <div class="container col-xxl-8 px-5 pb-4 pb-lg-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           
-          <div class="col-lg-8 my-5 d-flex flex-column align-items-center" data-anima="esquerda">
+          <div class="col-lg-8 my-4  my-lg-5 d-flex flex-column align-items-center" data-anima="esquerda">
             
-            <!-- <img src="./images/logo/logo.png" class="d-block mx-lg-auto img-fluid pb-3" alt="Monica Costa" width="50%" height="" loading="lazy"> -->
+            <!-- <img src="./images/logo/logo_nome.png" class="d-block py-5 mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy"> -->
             
             <p class="lead display-6 my-0 mb-lg-5 text-center">
               Como prefere falar comigo?
@@ -21,7 +21,7 @@
     </div>  
   
   <!-- Form Contact -->
-  <section id="contact" class="section db py-5 px-3" data-anima="baixo">
+  <section id="contact" class="section db py-5 pt-lg-4 px-3" data-anima="baixo">
     <div class="container">
         <div class="section-title text-center">
             <h3>Contato</h3>
@@ -59,12 +59,12 @@
                             
                             <!-- Resposta do formulário enviado -->
                               <% if(formContato.info){ %>
-                                  <div class="container p-4 position-absolute bottom-0 mx-auto pulse-brilho">                                
+                                  <div class="container p-4 position-absolute top-0 mx-auto pulse-brilho">                                
                                     <div class="row">                                
                                       <div class="col-md-4 mx-auto w-auto">                                
                                         <div class="alert alert-success alert-dismissible fade show" role="alert">
                                 
-                                          <span><%= formContato.info %>! Obrigada pelo contato, responderei o mais rápido possívels!</span>
+                                          <span><%= formContato.info %>! Obrigada pelo contato, responderei o mais rápido possível!</span>
                                 
                                           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                                 
@@ -75,7 +75,7 @@
                               <% } %>
 
                               <% if(formContato.err){ %>
-                                <div class="container p-4 position-absolute bottom-0 mx-auto pulse-brilho">                                
+                                <div class="container p-4 position-absolute top-0 mx-auto pulse-brilho">                                
                                   <div class="row">                                
                                     <div class="col-md-4 mx-auto w-auto">                                
                                       <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -111,7 +111,7 @@
     <h3>Você também pode...</h3>
     <p>Me chamar no whatsapp</p>
     <!-- <img src="./images/seta-encaracolada.svg" class="pb-5 ps-5 pt-4 ms-5 mb-5" style="transform: rotateZ(-50deg);"> -->
-    <div class="col-6 btn-card pb-5">
+    <div class="col-6 col-lg-3 btn-card pt-2 pb-5">
         <a href="https://wa.me/+14402431094" class="link-sucess">
           <div class="lc-block card h-100 p-0 link-success shadow rounded-2">
               <div class="lc-block card-body">
@@ -136,7 +136,7 @@
     <h3 class="pt-5">Ou se preferir...</h3>
     <p class="px-4">Pode me ligar ou ver a localização do atendimento presencial clicando nos botões abaixo</p>
   </div><!-- end title -->
-  <div class="row row-cols-2 row-cols-md-2 row-cols-lg-4 g-3 justify-content-center">
+  <div class="row row-cols-2 row-cols-md-2 row-cols-lg-4 pt-2 g-3 justify-content-center">
 
   
 
