otimização de imagens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -341,7 +341,7 @@ nav img{
 }
 
 .p1{
-  background-image: url('../images/conversando_com_terapeuta.jpg');
+  background-image: url('../images/conversa-com-terapeuta.avif');
 }
 
 
