--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
-<footer>
+<footer style="background-color: #fff3e8; margin: 0;">
     <section>
-      <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-3 mt-5 mb-3 border-top" style="background-color: #fff3e8;">
+      <div class="container d-flex flex-column flex-lg-row justify-content-center align-items-center py-4 mt-5 border-top">
         
         <div class="col-md-4 d-flex align-items-center">
           <div class="lc-block text-center mb-3 mb-md-0">
@@ -42,7 +42,7 @@
 
         <div class="col-md-4 d-flex align-items-center align-self-center align-items-lg-end pb-lg-0 pt-lg-5 flex-column">
           <span>@ 2024, Psicóloga CRP 05/73889</span>
-          <span>Site desenvolvido por <a href="#">F1 Dev</a></span>
+          <span>Site desenvolvido por <a href="#">AltitudeSolD</a></span>
         </div>
     
       </div>
