--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
           </div>
           <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
             
-            <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+            <img src="./images/logo/logo-nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             
             <p class="p-0 lead text-center pt-3 pb-0">
               Te ajudo a cultivar a auto estima e construir relacionamentos mais saudáveis
@@ -47,7 +47,7 @@
 	  <p class="lead mb-2">Veja abaixo algumas situações comuns relacionadas a saúde mental</p>
     </div>
 
-    <div class="position-relative d-flex justify-content-center w-100 min-vh-100 p-0 " style="background: url(./images/outono.jpg) 38% 62% / cover no-repeat;">
+    <div class="position-relative d-flex justify-content-center w-100 min-vh-100 p-0 " style="background: url(./images/mao-acolhedora.avif) 38% 62% / cover no-repeat;">
 
 		<div class="w-100 h-100 bg-white position-absolute opacity-50 m-0 p-0 shadow-lg"></div>
 
@@ -136,7 +136,7 @@
 <!-- section Features (caracteristicas) -->
 <section class="min-vh-100 py-4 d-flex flex-column">
 
-	<div class="d-flex parallax p1 rounded mb-3" style="height: 23rem;">
+	<div class="d-flex parallax p1 mb-3" style="height: 23rem;">
 	
 	<div class="container px-xl-5 text-center pt-5 pb-3 d-flex flex-column align-items-center justify-content-center" data-anima="direita">
 		<h2 class="fw-bold display-5 text-white" style="text-shadow: 1px 1px 8px #123;">Como a terapia pode ajudar?</h2>
@@ -259,7 +259,7 @@
 	  </div>
 	  <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
 		<div class="lc-block">
-		  <img class="rounded-start w-100" src="./images/monica-main.JPG" alt="mônica" width="720"></div>
+		  <img class="rounded-start w-100" src="./images/psicologa-monica-costa.webp" alt="psicologa-monica-costa" width="720"></div>
 	  </div>
 	</div>
 
@@ -620,7 +620,7 @@
 <!-- Section call to action -->
 <section class="d-flex align-items-center">
 
-	<div style="background:url(./images/outono.jpg)  center / cover no-repeat; width:100%; position: absolute; z-index:-1; height: 30rem; transform: scaleX(-1);"></div>
+	<div style="background:url(./images/mao-acolhedora.avif)  center / cover no-repeat; width:100%; position: absolute; z-index:-1; height: 30rem; transform: scaleX(-1);"></div>
 
 	<div class="container text-center py-4 py-md-5 mb-1 ">
 		<div class="lc-block border-0 text-center rounded p-4 p-lg-5" style="background-color: rgba(255, 255, 255, 0.7);">
@@ -638,7 +638,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container d-grid gap-2 d-md-flex justify-content-center" data-anima="baixo">
+			<div class="container d-grid gap-2 d-md-flex justify-content-center">
 				<a class="botao-dourado px-4 w-auto pulse-brilho" href="/contato"role="button">
 					<span>Agende uma avaliação grátis</span>
 				</a>       
