--- a/views/tratamentos.ejs
+++ b/views/tratamentos.ejs
@@ -8,7 +8,7 @@
 				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
 			</div>
 			<div class="col-lg-6 pt-lg-5" data-anima="esquerda">
-            	<img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+            	<img src="./images/logo/logo-nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
                 <p class="lead text-center pt-2">
 					Vamos tratar juntos os pensamentos, emoções e comportamentos que te trazem sofrimento
         	    </p>
@@ -30,7 +30,7 @@
 	<!-- Button trigger modal -->
 <button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalAnsiedade" data-anima="baixo">
 	<h1 class="position-absolute top-50 start-50 translate-middle display-4">ANSIEDADE</h1>
-	<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+	<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-ansiedade" loading="lazy">
 </button>
   
   <!-- Modal -->
@@ -69,7 +69,7 @@
 	<!-- Button trigger modal -->
 	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
 		<h1 class="position-absolute top-50 start-50 translate-middle display-4">DEPRESSÃO</h1>
-		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+		<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-depressao" loading="lazy">
 	</button>
 	  
 	  <!-- Modal -->
@@ -113,7 +113,7 @@
 		<!-- Button trigger modal -->
 		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalVicios" data-anima="baixo">
 			<h1 class="position-absolute top-50 start-50 translate-middle display-4">VÍCIOS</h1>
-			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+			<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-vicios" loading="lazy">
 				</button>
 		
 		<!-- Modal -->
@@ -152,7 +152,7 @@
 		<!-- Button trigger modal -->
 		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalEstresse" data-anima="baixo">
 			<h1 class="position-absolute top-50 start-50 translate-middle display-5">ESTRESSE PÓS-TRAUMÁTICO</h1>
-			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+			<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-estresse" loading="lazy">
 			
 		</button>
 		
@@ -197,7 +197,7 @@
 		<!-- Button trigger modal -->
 	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalFobias" data-anima="baixo">
 		<h1 class="position-absolute top-50 start-50 translate-middle display-4">FOBIAS</h1>
-		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+		<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-fobias" loading="lazy">
 	</button>
 	  
 	  <!-- Modal -->
@@ -235,7 +235,7 @@
 		<!-- Button trigger modal -->
 		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTSono" data-anima="baixo">
 			<h1 class="position-absolute top-50 start-50 translate-middle display-5">TRANSTORNOS DO SONO</h1>
-			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+			<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-transtornos-do-sono" loading="lazy">
 		</button>
 		  
 		  <!-- Modal -->
@@ -279,7 +279,7 @@
 		<!-- Button trigger modal -->
 	<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTA" data-anima="baixo">
 		<h1 class="position-absolute top-50 start-50 translate-middle display-5">TRANSTORNOS ALIMENTARES</h1>
-		<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+		<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-transtornos-alimentares" loading="lazy">
 	</button>
 		
 		<!-- Modal -->
@@ -319,7 +319,7 @@
 		<!-- Button trigger modal -->
 		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalToc" data-anima="baixo">
 			<h1 class="position-absolute top-50 start-50 translate-middle display-5">TOC</h1>
-			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
+			<img class="w-100 rounded opacity-50" src="./images/mao-acolhedora.avif" sizes="" width="" height="" alt="mao-acolhedora-para-toc" loading="lazy">
 		</button>
 			
 			<!-- Modal -->
