--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -10,7 +10,7 @@
 			  <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
 	
             
-            <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+            <img src="./images/logo/logo-nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             <!-- <h4>
               Psicóloga
             </h4>
